add service & routing & components page (books)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 <!-- <app-user></app-user> -->
-<app-books></app-books>
+<!-- <app-books></app-books> -->
+
+<h1>My App Angular</h1>
+
+<a routerLink="/" routerLinkActive="router-link-active">Home</a>
+<a routerLink="/books">Books</a>
+
+<router-outlet></router-outlet>
